--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "2048-game",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev": "parcel index.html"
+  },
   "repository": "https://github.com/JSEnthusiast/2048-game.git",
   "license": "MIT"
 }
